--- a/src/css/home.css
+++ b/src/css/home.css
@@ -3483,6 +3483,14 @@ margin-top:1.875rem;
     transition: 1s ease transform;
 
 }
+.top--sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateZ(0);
+    z-index: 100;
+}
 .countdown-timer__number__item span {
     position: absolute;
     top: 50%;
