--- a/src/css/base.css
+++ b/src/css/base.css
@@ -89,6 +89,11 @@
     display: flex;
     justify-content: center;
   }
+  .center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .button {
     color: #333;
     background-color: #fff;
