--- a/src/css/home.css
+++ b/src/css/home.css
@@ -9,7 +9,32 @@
     margin-left: auto;
     width: 1200px;
 }
-
+.react-slideshow-wrapper .images-wrap {
+    display: flex;
+    flex-wrap: wrap;
+   
+    margin: 0;
+    padding: 0;
+}
+.react-slideshow-container+ul.indicators {
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    transform: translate(-50%);
+    transition: opacity .5s ease;
+    width: 100%;
+    text-align: center;
+}
+.react-slideshow-container+ul.indicators li {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+    opacity: 1;
+    border: 1px solid hsla(0,0%,53.7%,.4);
+    background-color: hsla(0,0%,100%,.4);
+}
 .page-controller{
 display: flex;
 align-items: center;
