--- a/src/css/home.css
+++ b/src/css/home.css
@@ -16,6 +16,17 @@
     margin: 0;
     padding: 0;
 }
+.text-transfrom{
+    padding-top: 56px;
+    animation:translate 2s linear 1s infinite 
+}
+@keyframes translate {
+    0%   {transform: translateY(0);}
+    25%  {transform: translateY(-10px);}
+    50%  {transform: translateY(-20px);}
+    75%  {transform: translateY(-30px);}
+    100% {transform: translateY(0px);}
+  }
 .react-slideshow-container+ul.indicators {
     position: absolute;
     bottom: 1rem;
