--- a/src/css/vendor.css
+++ b/src/css/vendor.css
@@ -7064,7 +7064,7 @@ cursor: pointer;
   background-color: white;
   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   padding: 1.3rem 1rem;
   z-index: -5;
 }
